ENTRYSTORE-1022 Address PR comments